--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,19 @@
+        <footer class="row dp__footer">
+            <div class="twelve columns">
+                <a href="https://github.com/ganderzz">
+                    <i class="fa fa-github" aria-hidden="true"></i>
+                </a>
+
+                <a href="https://codepen.io/ganderzz/">
+                    <i class="fa fa-codepen" aria-hidden="true"></i>
+                </a>
+
+                <a href="https://twitter.com/DylanPaulus">
+                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                </a>
+            </div>
+        </footer>
+    </main>
+    
     </body>
 </html>
