--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
             {% include styles.scss %}
         {% endcapture %}
 
+        <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet" />
 
         <style>
