--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -1,13 +1,25 @@
 @import "normalize";
 @import "skeleton";
 
+body {
+    -webkit-text-size-adjust: 100%;
+    -webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+
+    font-family: 'Lato', sans-serif;
+}
+
 header {
-    margin-top: 40px;
+    margin-top: 50px;
     color: #111;
+
+    margin-bottom: 10px;
+    border-bottom: 1px solid #F1F1F1;
 }
 
 header h3 {
-    font-weight: 800;
+    font-weight: 700;
+    font-size: 2rem;
 
     a { 
         text-decoration: none;
@@ -51,6 +63,7 @@ header h3 {
 .dp__footer {
     font-size: 1.5rem;
     margin-top: 100px;
+    margin-bottom: 30px;
     text-align: center;
 }
 
