--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -30,6 +30,13 @@ header h3 {
     }
 }
 
+.dp__post-container {
+    line-height: 3rem;
+    
+    
+    code { line-height: 2.3rem; }
+}
+
 .dp__content { margin-top: 30px; }
 .dp__post {
     margin-top: 30px;
