--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,7 @@
 {% include header.html %}
 
-{{ content }}
+<section className="dp__post-container">
+    {{ content }}
+</section>
 
 {% include footer.html %}
