Whops! Reactified it

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 {% include header.html %}
 
-<section className="dp__post-container">
+<section class="dp__post-container">
     {{ content }}
 </section>
 
