Add tracking and menu link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,11 @@
 
     <main class="container">
         <header class="row">
-            <div class="twelve columns">
+            <div class="five columns">
                 <h3><a href="/">Dylan Paulus</a></h3>
             </div>
+
+            <nav class="seven columns" style="text-align: right;">
+                <a href="/">Home</a>
+            </nav>
         </header>
