--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -19,7 +19,7 @@ header {
 
 header h3 {
     font-weight: 700;
-    font-size: 2rem;
+    font-size: 2.3rem;
 
     a { 
         text-decoration: none;
@@ -28,6 +28,14 @@ header h3 {
 
         transition: all 0.12s;
     }
+}
+
+header nav a {
+    text-decoration: none;
+    color: #111;
+    cursor: pointer;
+
+    transition: all 0.12s;
 }
 
 .dp__post-container {
