--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -9,6 +9,11 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+h4 {
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+}
+
 header {
     margin-top: 50px;
     color: #111;
@@ -33,6 +38,7 @@ header h3 {
 header nav a {
     text-decoration: none;
     color: #111;
+    margin-left: 10px;
     cursor: pointer;
 
     transition: all 0.12s;
@@ -73,6 +79,14 @@ header nav a {
 
 .dp__post-tag { 
     color: #999;
+}
+
+.dp__about_links {
+    margin-top: 3rem;
+    text-align: center;
+    font-size: 2.5rem;
+
+    & > a { margin: 0 8px; }
 }
 
 .dp__footer {
