--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -89,6 +89,15 @@ header nav a {
     & > a { margin: 0 8px; }
 }
 
+.dp__content_image {
+    text-align: center;
+
+    & > img {
+        padding: 4px;
+        background: #DDD;
+    }
+}
+
 .dp__footer {
     font-size: 1.5rem;
     margin-top: 100px;
