Change weird about me section

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,7 +2,7 @@
 
     <section class="row dp__content">
         <div class="five columns">
-            Software Engineer working on the web by day. Trying out functional languages by night.
+            Maker of web things.
             
             <aside class="dp__about_links">
                 <a href="https://www.linkedin.com/in/dylanpaulus/">
