--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@
                         {{ post.date | date: "%B %e, %Y" }}
                     </div>
 
-                    <div class="seven columns">
+                    <div class="ten columns">
                         <h5 class="dp__post-header">
                             <a href="{{ post.url }}">{{ post.title }}</a>
                         </h5>
