Learning elm post

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,17 +2,11 @@
 
     <section class="row dp__content">
         <div class="five columns">
-            Fullstack developer of the web.
-            
-            <aside class="dp__about_links">
-                <a href="https://www.linkedin.com/in/dylanpaulus/">
-                    <i class="fa fa-linkedin" aria-hidden="true"></i>
-                </a>
-
-                <a href="https://stackoverflow.com/users/7828585/dpaulus">
-                    <i class="fa fa-stack-overflow" aria-hidden="true"></i>
-                </a>
-            </aside>
+            Fullstack developer working in React and C#. <br />
+            I enjoy creating web applications that improve efficiency and dignity of work.
+            <br />
+            <br />
+            Thoughts here are entirely my own.
         </div>
 
         <div class="seven columns">
