Add global component registration page & code highlighting

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,7 @@
 
         {% capture styles %}
             {% include styles.scss %}
+            {% include code-format.scss %}
         {% endcapture %}
 
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
