Add highlighting on all pages

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,7 +2,7 @@
 
     <section class="row dp__content">
         <div class="five columns">
-            Fullstack developer of the web.
+            Fullstack developer.
         </div>
 
         <div class="seven columns">
