Add post about factory components

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,7 +2,7 @@
 
     <section class="row dp__content">
         <div class="five columns">
-            Fullstack developer.
+            Hi, I'm Dylan. A fullstack developer working primarily in React and C#(.Net). 
         </div>
 
         <div class="seven columns">
