--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
                 <h3><a href="/">Dylan Paulus</a></h3>
             </div>
 
-            <nav class="seven columns" style="text-align: right;">
+            <nav class="seven columns">
                 <a href="/">Home</a>
                 <a href="/about">About</a>
             </nav>
