--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 {% include header.html %}
 
     <section class="row dp__content">
-        {% for post in site.posts %}	
+        {% for post in paginator.posts %}	
             <div class="twelve columns dp__post">
                 <div class="row">
                     <div class="two columns dp__post-date">
@@ -19,5 +19,19 @@
             </div>
         {% endfor %}
     </section>
+
+    <div class="pagination">
+        {% if paginator.previous_page %}
+            <a class="previous" href="{{ paginator.previous_page_path }}">Newer</a>
+        {% else %}
+            <span class="previous">Newer</span>
+        {% endif %}
+        <span style="margin: 0 5px;">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+        {% if paginator.next_page %}
+            <a class="next" href="{{ paginator.next_page_path }}">Older</a>
+        {% else %}
+            <span class="next">Older</span>
+        {% endif %}
+    </div>
 
 {% include footer.html %}
