--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,11 @@
                             <a href="{{ post.url }}">{{ post.title }}</a>
                         </h5>
 
-                        <span class="dp__post-tag">{% if post.category %}{{ post.category }}{% endif %}</span>
+                        <span class="dp__post-tag">
+                            {% if post.categories %}
+                                {{ post.categories | array_to_sentence_string }}
+                            {% endif %}
+                        </span>
                     </div>
                 </div>
             </div>
