--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,44 +1,45 @@
-        <footer class="row dp__footer">
-            <div class="twelve columns">
-                {% if site.author.github %}
-                    <a href="https://github.com/{{ site.author.github }}">
-                        <i class="fa fa-github" aria-hidden="true"></i>
-                    </a>
-                {% endif %}
+<footer class="row dp__footer">
+    <div class="twelve columns">
+        <div class="wrapper">
+            {% if site.author.github %}
+            <a href="https://github.com/{{ site.author.github }}" aria-hidden="true">
+                <i class="fab fa-github" aria-hidden="true"></i>
+            </a>
+            {% endif %} {% if site.author.twitter %}
+            <a href="https://twitter.com/{{ site.author.twitter }}" aria-hidden="true">
+                <i class="fab fa-twitter" aria-hidden="true"></i>
+            </a>
+            {% endif %} {% if site.author.linkedin %}
+            <a href="https://www.linkedin.com/in/{{ site.author.linkedin }}" aria-hidden="true">
+                <i class="fab fa-linkedin" aria-hidden="true"></i>
+            </a>
+            {% endif %} {% if site.author.stackoverflow %}
+            <a href="https://stackoverflow.com/users/{{ site.author.stackoverflow }}" aria-hidden="true">
+                <i class="fab fa-stack-overflow" aria-hidden="true"></i>
+            </a>
+            {% endif %}
 
-                {% if site.author.twitter %}
-                    <a href="https://twitter.com/{{ site.author.twitter }}">
-                        <i class="fa fa-twitter" aria-hidden="true"></i>
-                    </a>
-                {% endif %}
+            <a href="/feed.xml" aria-hidden="true">
+                <i class="fa fa-rss-square" aria-hidden="true"></i>
+            </a>
+        </div>
+    </div>
+</footer>
+</main>
 
-                {% if site.author.linkedin %}
-                    <a href="https://www.linkedin.com/in/{{ site.author.linkedin }}">
-                        <i class="fa fa-linkedin" aria-hidden="true"></i>
-                    </a>
-                {% endif %}
+<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
 
-                {% if site.author.stackoverflow %}
-                    <a href="https://stackoverflow.com/users/{{ site.author.stackoverflow }}">
-                        <i class="fa fa-stack-overflow" aria-hidden="true"></i>
-                    </a>
-                {% endif %}
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-                <a href="/feed.xml">
-                    <i class="fa fa-rss-square" aria-hidden="true"></i>
-                </a>
-            </div>
-        </footer>
-    </main>
+    ga('create', 'UA-69213445-1', 'auto');
+    ga('send', 'pageview');
+</script>
+</body>
 
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-69213445-1', 'auto');
-        ga('send', 'pageview');
-    </script>
-    </body>
 </html>
