--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,21 +33,23 @@
 </head>
 
 <body>
-    <header style="width: 100%; background: #333;">
-        <div class="header__title">
-            <a href="/">Dylan Paulus</a>
+    <header class="header">
+        <div class="header__body container">
+            <div class="header__title">
+                <a href="/">Dylan Paulus</a>
+            </div>
+    
+            <div class="header__search">
+                <i class="fa fa-search search__icon" aria-hidden="true"></i>
+                <input type="text" id="search-input" placeholder="Search..." />
+                <ul id="results-container"></ul>
+            </div>
+    
+            <nav class="header__links">
+                <a href="/">Home</a>
+                <a href="/about">About</a>
+            </nav>
         </div>
-
-        <div class="header__search">
-            <i class="fa fa-search search__icon" aria-hidden="true"></i>
-            <input type="text" id="search-input" placeholder="Search..." />
-            <ul id="results-container"></ul>
-        </div>
-
-        <nav class="header__links">
-            <a href="/">Home</a>
-            <a href="/about">About</a>
-        </nav>
     </header>
 
     <main class="container">
