--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: #0c576e;
+  color: #9d6742;
 }
 
 h4 {
@@ -22,19 +22,30 @@ h4 {
   margin-bottom: 0.5rem;
 }
 
-header {
+.container {
+  max-width: 90%;
+  width: 85%;
+}
+
+.header {
   display: flex;
+  height: 200px;
+  background: #2b2e33;
   color: #fff;
-  margin-bottom: 40px;
-  border-bottom: 1px solid #f1f1f1;
+
+  .header__body {
+    display: flex;
+    height: 70px;
+
+    & > * {
+      align-items: center;
+    }
+  }
 
   a {
     color: #fff !important;
   }
-  & > * {
-    align-items: center;
-  }
-
+  
   .header__title {
     display: flex;
     font-weight: 700;
@@ -67,6 +78,7 @@ header {
     text-decoration: none;
     margin-left: 12px;
     padding: 5px;
+    font-weight: 600;
     cursor: pointer;
 
     transition: all 0.12s;
@@ -149,6 +161,13 @@ header {
   }
 }
 
+main.container {
+  margin-top: -120px;
+  background: #FFF;
+  padding: 20px;
+  box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.1);
+}
+
 .dp__post-container {
   line-height: 3rem;
 
@@ -177,13 +196,13 @@ header {
 }
 
 .dp__post-header a {
-  color: #0c576e;
+  color: #9d6742;
   text-decoration: none;
 
   transition: all 0.12s;
 
   &:hover {
-    color: #1eaedb;
+    color: darken(#9d6742, 16%);
   }
 }
 
